# MinimalTimer

./: .gitignore  CHANGELOG.md  launch.vbs  package-lock.json  package.json  要件定義.md
.claude/: settings.json  settings.local.json
changelog/: 2026-03.md  2026-04-01.md  2026-04-08.md  2026-04-10.md  2026-04-13.md  2026-04-15.md  2026-04-16.md  2026-04-18.md  2026-04-19.md  2026-05-03.md  2026-05-07.md  2026-05-23.md
docs/: MinimalTimer_WorkLogs.xlsx  excel-power-automate.md  google-apps-script.js
docs/break_mode/: implementation_plan.md  task.md
src/: index.html  main.js  noteui.js  pomo.css  pomo.html  pomo.js  records.css  records.html  records.js  store.js  style.css  task.css  task.html  task.js  tasks.js  timelapse.js  water.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
デザイン案/: imagen_プロンプト.md  テンプレート切替_プロトタイプ.html  ノートデザイン_プロトタイプ.html  ノートデザイン_仕様.md  縦長リデザイン_プロトタイプ.html  縦長リデザイン_モック.html  縦長リデザイン_モック20案.html  縦長リデザイン_モック_ライト.html  縦長リデザイン_計画書.md  記録機能強化_計画書.md
