[package]
name    = "minimal-timer"
version = "0.1.0"
edition = "2021"
description = "Minimalist Visual Timer"

[lib]
name       = "minimal_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-store = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
