[package]
name    = "minimal-timer"
version = "0.1.0"
edition = "2021"
description = "Minimalist Visual Timer"

[lib]
name       = "minimal_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-store = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
